--- a/css/staff_page.css
+++ b/css/staff_page.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: url('../../images/background_cliffs.png');
+  background: var(--white);
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
