Redesigned the main page, making it more responsive to different viewport sizes. Added an idle screen.

--- a/css/main_page.css
+++ b/css/main_page.css
@@ -7,91 +7,83 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: url('../../images/background_cliffs.png');
+  background: url('../../images/poly1.png');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-#main_footer {
-  width: 100vw;
-  height: auto;
+#idle_overlay {
+  width: 100%;
+  height: 100%;
   position: fixed;
-  bottom: 0;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-#main_footer .text {
-  color: var(--white);
-}
-
-#footer_collapsed_preset {
-  height: 20px;
-  width: 100%;
-  background: var(--navy);
-  transition: background 500ms;
-}
-
-#footer_expanded_preset {
-  height: 1px;
-  width: 100%;
-  background: var(--navy);
-  transition: height 500ms;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-#footer_expanded_preset .text_grid {
-  width: auto;
-  margin: auto 0px auto 100px;
-  grid-column-gap: 20px;
-}
-#footer_expanded_preset .text_grid h3 {
-  grid-area: 1 / 1 / 2 / 3;
-  margin-bottom: 8px;
-}
-
-#contact_email {
+  background: none;
+  backdrop-filter: blur(10px);
+  transition: opacity 250ms linear;
   cursor: pointer;
+  z-index: 99;
 }
-#contact_email:hover .right_arrow {
-  border-color: var(--burgundy);
-  transition: 50ms;
+#idle_overlay h1 {
+  font-weight: bold;
+  animation: idle_pulse 5s infinite;
+}
+@keyframes idle_pulse {
+  0% {
+		transform: scale(0.95);
+	}
+
+	50% {
+		transform: scale(1);
+	}
+
+	100% {
+		transform: scale(0.95);
+	}
 }
 
 #login_box {
-  width: 1100px;
-  height: 420px;
-  background: var(--white);
+  width: 50%;
+  min-width: 740px;
+  max-width: 900px;
+  height: 50%;
+  max-height: 400px;
+  position: fixed;
+  top: 30%;
   border-radius: 60px;
-  margin-top: 140px;
   box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
   display: block;
+  background-color: rgba(0, 0, 0, .30);
+  backdrop-filter: blur(5px);
+  transform: scale(0.0);
+  transition: transform 200ms;
+}
+#login_box header h2 {
+  font-size: 32px;
+  letter-spacing: 4px;
+  color: var(--white);
 }
 #login_box header {
   width: 100%;
   min-height: 88px;
-  background: var(--burgundy);
+  background-color: rgba(0, 0, 0, 0.60);
   grid-area: 1 / 1 / 1 / 4;
   border-radius: 60px 60px 0px 0px;
   display: flex;
-  border-bottom: 4px solid var(--black);
-}
-#login_box h2 {
-  margin: auto 0px auto 40px;
-  color: var(--white);
+  align-items: center;
+  justify-content: center;
 }
 #login_box .login_preset {
   display: none;
   flex-direction: column;
   height: 100%;
-  max-height: 420px;
 }
 #login_box #student_selection_preset {
-  display: block;
+  display: flex;
 }
 #back_button {
   display: none;
@@ -99,14 +91,19 @@ body {
 
 .login_preset form {
   height: 100%;
-  max-height: 320px;
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr auto 1fr;
+  grid-template-columns: 30% 60% 10%;
+  grid-template-rows: 100px auto 1fr;
   grid-row-gap: 30px;
   grid-auto-flow: row;
-  background: none;
+  background: var(--white);
+  border-radius: 0px 0px 60px 60px;
+}
+.login_preset divider {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 .login_preset label {
   width: auto;
@@ -119,7 +116,7 @@ body {
 }
 .login_preset input, select {
   height: 50px;
-  width: 662px;
+  width: 100%;
   margin: auto auto 0px 0px;
   background: var(--light-grey);
   border: none;
@@ -143,8 +140,8 @@ body {
 
 .login_preset #student_sign_out_submit, #staff_login_submit, #student_sign_in_submit {
   margin: auto;
-  grid-column: 2 / -1;
-  width: 300px;
+  grid-column: 2;
+  width: 100%;
   background: var(--navy);
   cursor: pointer;
   font-family: "Montserrat";
@@ -156,7 +153,6 @@ body {
   margin-left: 20%;
 
   border-radius: 8px;
-  width: 80%;
   height: 50px;
   margin: 0;
 }
@@ -168,31 +164,38 @@ body {
 }
 
 #student_selection_grid {
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  grid-template-rows: 1fr;
+  display: flex;
   height: 100%;
-  max-height: 320px;
   width: 100%;
-  background: none;
 }
-#student_selection_grid divider {
-  width: 4px;
-  height: 80%;
-  background: var(--black);
-  border-radius: 2px;
-  display: block;
-  margin: auto;
+#student_selection_grid container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-#student_selection_grid button {
-  width: 80%;
+#student_selection_grid .sign_in_out_button {
+  width: 90%;
   height: 80%;
-  margin: auto;
-  border-radius: 16px;
+  border-radius: 30px;
   border: none;
   font-family: "Montserrat";
   cursor: pointer;
   box-shadow: 0px 3px 15px rgb(0 0 0 / 20%);
   transition: 200ms;
+  background-position: center;
+  background: var(--white);
+  transition: background 1000ms;
+}
+#student_selection_grid container:nth-of-type(1) .sign_in_out_button:active {
+  background-color: var(--sign_in_button_color);
+  background-size: 100%;
+  transition: background 40ms;
+}
+#student_selection_grid container:nth-of-type(2) .sign_in_out_button:active {
+  background-color: var(--sign_out_button_color);
+  background-size: 100%;
+  transition: background 40ms;
 }
 </style>
