--- a/css/main_page.css
+++ b/css/main_page.css
@@ -18,7 +18,7 @@ body {
   width: 100%;
   height: 100%;
   position: fixed;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -59,7 +59,7 @@ body {
   display: block;
   background-color: rgba(0, 0, 0, .30);
   backdrop-filter: blur(5px);
-  transform: scale(0.0);
+  transform: scale(1.0);
   transition: transform 200ms;
 }
 #login_box header h2 {
