--- a/css/mainstyles.css
+++ b/css/mainstyles.css
@@ -15,7 +15,13 @@
   --bookmark_background: var(--burgundy);
   --sign_in_button_color: rgba(162, 242, 178, 1);
   --sign_out_button_color: rgba(248, 200, 220, 1);
+  --sidebar_color: rgba(55,71,79,0.8);
 }
+
+body {
+  overflow-x: hidden;
+}
+
 #main_header {
   position: sticky;
   width: 100%;
@@ -29,6 +35,7 @@
   box-shadow: 0 -6px 10px 5px rgba(0,0,0,0.5);
   top: 0;
   white-space: nowrap;
+  z-index: 2;
 }
 #main_header img {
   height: 120px;
@@ -167,4 +174,71 @@ navbar .divider {
   line-height: 27px;
 }
 
+.hidden {
+  display: none;
+}
+.wrapper {
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+.main {
+  width: 100%;
+  height: 150vh;
+  background: var(--white);
+  transition: width 300ms linear;
+}
+#sidebar {
+  position: sticky;
+  top: 140px;
+  width: 300px;
+  height: calc(100vh - 140px);
+  background: var(--sidebar_color);
+  z-index: 1;
+  display: block;
+  transition: width 200ms linear, background 200ms linear;
+  box-shadow: 0 -6px 10px 5px rgb(0 0 0 / 30%);
+}
+.sidebar_button {
+  width: 100%;
+  height: 48px;
+  background: var(--navy);
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  color: var(--white);
+  border: none;
+  cursor: pointer;
+}
+.sidebar_button .left_arrow {
+  transform: scale(1.5) rotate(135deg);
+}
+#sidebar_toggle:checked ~ .sidebar_button .left_arrow {
+  transform: scale(1.5) rotate(-45deg);
+}
+#sidebar_contents {
+  padding: 0px;
+  margin-top: 20px;
+  width: 100%;
+  height: auto;
+  background: rgba(55,71,79,0.3);
+  transition: opacity 200ms linear;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#sidebar_contents li {
+  width: 100%;
+  padding: 4px 0px;
+  height: auto;
+  display: block;
+  text-align: center;
+  color: var(--white);
+  cursor: pointer;
+}
+#sidebar_contents li:hover {
+  background: rgba(0,0,0,0.3);
+}
 </style>
