--- a/css/staff_page.css
+++ b/css/staff_page.css
@@ -20,6 +20,7 @@ body {
   width: 100%;
   height: auto;
   display: flex;
+  flex-direction: row;
 }
 
 .main {
@@ -29,8 +30,8 @@ body {
   transition: width 300ms linear;
 }
 .main_section {
-  width: 94%;
-  padding: 20px 2% 0px 2%;
+  width: 96%;
+  padding: 20px 20px 0px 20px;
   height: auto;
   min-height: 200px;
   display: none;
@@ -46,6 +47,7 @@ body {
   position: sticky;
   top: 140px;
   width: 300px;
+  min-width: 300px;
   height: calc(100vh - 140px);
   background: url('../../images/poly1.png');
   background-size: cover;
@@ -81,6 +83,10 @@ body {
 #sidebar_toggle:checked ~ label .left_arrow {
   transform: scale(1.5) rotate(-45deg);
   transition: 200ms;
+}
+#sidebar_contents_container {
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 #sidebar_contents {
