--- a/css/staff_page.css
+++ b/css/staff_page.css
@@ -45,10 +45,10 @@ body {
 
 #sidebar {
   position: sticky;
-  top: 140px;
+  top: 120px;
   width: 300px;
   min-width: 300px;
-  height: calc(100vh - 140px);
+  height: calc(100vh - 120px);
   background: url('../../images/poly1.png');
   background-size: cover;
   z-index: 1;
@@ -148,5 +148,33 @@ body {
 }
 #sidebar_contents .sidebar_button:hover {
   background: rgba(0,0,0,0.2);
+}
+
+@media screen and (max-width: 1400px), (max-height: 800px) {
+  #main_header {
+    min-height: 80px;
+  }
+  #main_header img {
+    width: 65px;
+    height: 60px;
+    margin: 10px 0px 10px 10px;
+  }
+  #main_header h5 {
+    font-size: 16px;
+  }
+  #main_header h1 {
+    font-size: 20px;;
+  }
+  #main_header .blue_button {
+    height: 32px;
+    border-radius: 12px;
+  }
+  navbar {
+    padding: 0px 20px 0px 0px;
+  }
+  #sidebar {
+    height: calc(100vh - 80px);
+    top: 80px;
+  }
 }
 </style>
