--- a/css/staff_page.css
+++ b/css/staff_page.css
@@ -31,7 +31,7 @@ body {
 }
 .main_section {
   width: 96%;
-  padding: 20px 20px 0px 20px;
+  padding: 20px 2% 0px 2%;
   height: auto;
   min-height: 200px;
   display: none;
@@ -39,8 +39,9 @@ body {
 .main_section_active {
   display: block;
 }
-.main_section h2{
+.title {
   text-transform: capitalize;
+  margin-bottom: 40px;
 }
 
 #sidebar {
@@ -115,6 +116,9 @@ body {
   background: rgba(0,0,0,0.15);
   margin: 8px 0px;
 }
+#sidebar_contents li:last-child {
+  margin-bottom: 40px;
+}
 #sidebar_contents .sidebar_subtitle {
   width: 100%;
   padding: 4px 0px;
@@ -148,6 +152,101 @@ body {
 }
 #sidebar_contents .sidebar_button:hover {
   background: rgba(0,0,0,0.2);
+}
+
+
+.table_wrapper {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  border-radius: 60px 60px 30px 30px;
+  box-shadow: 0px 3px 15px rgb(0 0 0 / 20%);
+  margin-bottom: 40px;
+}
+.table_wrapper header {
+  width: 100%;
+  min-height: 60px;
+  grid-area: 1 / 1 / 2 / 2;
+  border-radius: 60px 60px 0px 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+.table_wrapper header .button_wrapper {
+  width: auto;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 60px;
+  grid-auto-columns: 60px;
+  grid-template-rows: 1fr;
+  grid-auto-flow: column;
+  grid-column-gap: 16px;
+  margin: auto 60px auto auto;
+}
+.table_wrapper header button {
+  height: 100%;
+  width: 100%;
+  padding: 4px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  transition: color 100ms;
+  color: black;
+}
+.table_wrapper header button:hover {
+  color: var(--grey);
+}
+.table_wrapper footer {
+  width: 100%;
+  min-height: 30px;
+  grid-area: 1 / 1 / 2 / 2;
+  border-radius: 0px 0px 60px 60px;
+}
+.table_wrapper footer, header {
+  background-color: #2D3A43;
+}
+.table_wrapper header h2 {
+  font-size: 32px;
+  letter-spacing: 4px;
+  color: var(--white);
+  margin-left: 60px;
+}
+.table {
+  border-collapse: collapse;
+  table-layout: fixed;
+  width: 100%;
+}
+.table td, .table th {
+  padding: 8px;
+}
+.table th:last-of-type {
+  width: 60px;
+}
+.table tr:nth-child(even){
+  background-color: #DDDDDD;
+}
+.table tr:hover {
+  background-color: rgba(0,0,0,0.2);
+}
+.table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #3C4D5A;
+  color: white;
+}
+.table button {
+  width: 100%;
+  padding: 4px;
+  height: auto;
+  border: none;
+  border-radius: 8px;
+  color: var(--white);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1400px), (max-height: 800px) {
