--- a/css/staff_page.css
+++ b/css/staff_page.css
@@ -253,7 +253,7 @@ body {
   display: none;
 }
 
-.text_input_area {
+.input_wrapper {
   width: 100%;
   height: auto;
   display: grid;
@@ -261,22 +261,22 @@ body {
   grid-template-columns: 35% 65%;
   margin: 16px 0px;
 }
-.text_input_area * {
+.input_wrapper * {
   width: 100%;
   height: 100%;
 }
-.text_input_area label {
+.input_wrapper label {
   grid-area: 1 / 1 / 2 / 2;
   text-align: left;
 }
-.text_input_area input {
+.input_wrapper input {
   padding: 0;
   margin: -2px -2px 0px 0px;
   border: 2px solid #C6C4C8;
   border-radius: 4px;
   font-size: 16px;
 }
-.text_input_area textarea {
+.input_wrapper textarea {
   padding: 0;
   margin: -2px -2px 0px 0px;
   border: 2px solid #C6C4C8;
@@ -302,38 +302,12 @@ body {
 .radio_input_area .radio_wrapper label {
   margin: auto auto auto 8px;
 }
-.submit_wrapper {
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-end;
-  margin-bottom: 16px;
-}
 .submit_wrapper input {
   width: 200px;
   height: 40px;
   cursor: pointer;
   border-radius: 4px;
   border: 2px solid #C6C4C8;
-}
-.remove_button_wrapper {
-  width: 100%;
-  height: auto;
-  display: grid;
-  grid-template-rows: 1fr;
-  grid-template-columns: 30% 40% 30%;
-  margin: 16px 0px;
-}
-.remove_button_wrapper input {
-  padding: 0;
-  margin: -2px -2px 0px 0px;
-  border: 2px solid #000;
-  border-radius: 4px;
-  font-size: 16px;
-  background: #FF5C33;
-  cursor: pointer;
 }
 
 @media screen and (max-width: 1400px), (max-height: 800px) {
