Fixed an issue where the whole page would reload when submitting a form

--- a/css/staff_page.css
+++ b/css/staff_page.css
@@ -116,7 +116,10 @@ body {
   background: rgba(0,0,0,0.15);
   margin: 8px 0px;
 }
-#sidebar_contents li:last-child {
+#sidebar_contents button {
+  border: none;
+}
+#sidebar_contents button:last-child {
   margin-bottom: 40px;
 }
 #sidebar_contents .sidebar_subtitle {
