--- a/css/main_page.css
+++ b/css/main_page.css
@@ -118,7 +118,7 @@ body {
 .login_preset input, select {
   height: 50px;
   width: 100%;
-  margin: auto auto 0px 0px;
+  margin: 0px auto auto 0px;
   background: var(--light-grey);
   border: none;
   border-radius: 8px;
@@ -131,7 +131,7 @@ body {
   font-size: 20px;
   line-height: 29px;
 }
-.login_preset #student_sign_out_location {
+.login_preset #locations_search_box {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
@@ -198,6 +198,49 @@ body {
   background-color: var(--red);
   background-size: 100%;
   transition: background 40ms;
+}
+
+.input_wrapper {
+  height: 50px;
+  width: 100%;
+  display: block;
+  margin: auto auto 0px 0px;
+  z-index: 2;
+  transition: opacity 100ms linear;
+}
+.input_wrapper ul {
+  width: 100%;
+  height: auto;
+  max-height: 100px;
+  background: rgb(158,194,230);
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background: #CBCBCB;
+  border: none;
+  border-radius: 8px;
+}
+.input_wrapper li {
+  width: 100%;
+  height: auto;
+  text-align: left;
+  cursor: pointer;
+}
+.input_wrapper input:focus ~ #location_suggestions {
+  opacity: 1.0;
+}
+.input_wrapper input:not(:focus) ~ #location_suggestions {
+  opacity: 0.0;
+}
+.input_wrapper li:hover {
+  background: #D9D9D9;
+}
+.input_wrapper li * {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 29px;
 }
 
 @media screen and (max-width: 1400px), (max-height: 800px) {
