--- a/css/main_page.css
+++ b/css/main_page.css
@@ -189,16 +189,6 @@ body {
   background: var(--white);
   transition: background 1000ms;
 }
-#student_selection_grid container:nth-of-type(1) .sign_in_out_button:active {
-  background-color: var(--green);
-  background-size: 100%;
-  transition: background 40ms;
-}
-#student_selection_grid container:nth-of-type(2) .sign_in_out_button:active {
-  background-color: var(--red);
-  background-size: 100%;
-  transition: background 40ms;
-}
 
 .input_wrapper {
   height: 50px;
@@ -214,9 +204,9 @@ body {
 .input_wrapper ul {
   width: 100%;
   height: auto;
-  max-height: 100px;
+  max-height: 153px;
   background: rgb(158,194,230);
-  margin: 0;
+  margin: 0px;
   padding: 0;
   overflow: hidden;
   background: #CBCBCB;
@@ -232,6 +222,7 @@ body {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  border-top: 1px solid black;
 }
 .input_wrapper input:focus ~ .suggested_inputs {
   opacity: 1.0;
@@ -250,8 +241,14 @@ body {
   font-size: 20px;
   line-height: 29px;
   display: inline-block;
-  margin: auto 0px;
+  margin: auto 0px auto 8px;
   padding: 0px;
+}
+.input_field {
+  padding: 0px 8px;
+}
+.capitalize {
+  text-transform: capitalize;
 }
 
 @media screen and (max-width: 1400px), (max-height: 800px) {
