added 'aliases' where locations can be given an alternative name; moved php used to load tables into a separate folder.

--- a/css/admin_page.css
+++ b/css/admin_page.css
@@ -46,6 +46,10 @@
 .input_area .input_wrapper {
   grid-template-columns: 30% 40% 30%;
 }
+.input_area .input_wrapper input {
+  text-transform: capitalize;
+  padding: 0px 0px 0px 8px;
+}
 .input_area .submit_wrapper {
   width: 100%;
   height: auto;
