Administrators can now add staff to the database via the web interface;

--- a/css/admin_page.css
+++ b/css/admin_page.css
@@ -46,9 +46,8 @@
 .input_area .input_wrapper {
   grid-template-columns: 30% 40% 30%;
 }
-.input_area .input_wrapper input {
+.capitalize {
   text-transform: capitalize;
-  padding: 0px 0px 0px 8px;
 }
 .input_area .submit_wrapper {
   width: 100%;
