--- a/css/staff_page.css
+++ b/css/staff_page.css
@@ -273,14 +273,14 @@ body {
   text-align: left;
 }
 .input_wrapper input {
-  padding: 0;
+  padding: 0px;
   margin: -2px -2px 0px 0px;
   border: 2px solid #C6C4C8;
   border-radius: 4px;
   font-size: 16px;
 }
 .input_wrapper textarea {
-  padding: 0;
+  padding: 0px;
   margin: -2px -2px 0px 0px;
   border: 2px solid #C6C4C8;
   border-radius: 4px;
