--- a/css/staff_page.css
+++ b/css/staff_page.css
@@ -346,6 +346,21 @@ body {
   border-radius: 4px;
   border: 2px solid #C6C4C8;
 }
+.range_wrapper {
+  display: grid;
+  grid-template-columns: 70% 30%;
+  grid-template-rows: 1fr;
+  grid-auto-flow: column;
+}
+.range_wrapper input[type="range"] {
+  width: 100%;
+}
+.range_wrapper output {
+  width: auto;
+  height: 100%;
+  padding: 0px 0px 0px 16px;
+  margin-left: auto;
+}
 
 @media screen and (max-width: 1400px), (max-height: 800px) {
   #main_header {
