Administrators can now set the location and nature of an event.
For example, an event that requires signing in does not require a location.
Whereas an event that required a user to sign out does require a location

--- a/css/admin_page.css
+++ b/css/admin_page.css
@@ -95,6 +95,13 @@
   margin-top: auto;
 }
 
+#event_nature_toggle:checked {
+  background: red;
+}
+#event_nature_toggle:not(:checked) {
+  background: lime;
+}
+
 @media screen and (max-width: 1400px) {
   #locations_edit_section form {
     width: 100%;
