--- a/css/main_page.css
+++ b/css/main_page.css
@@ -251,6 +251,49 @@ body {
   text-transform: capitalize;
 }
 
+#notification_wrapper {
+  width: 100%;
+  height: 0px;
+  max-height: 80px;
+  z-index: 1;
+  border: none;
+  margin: 0px;
+  padding: 0px;
+  background-repeat: no-repeat;
+  background-position: 10px center;
+  overflow: hidden;
+
+  display: block;
+  transition: height 500ms;
+}
+#notification_wrapper .message {
+  height: 100%;
+  width: 100%;
+  padding: 8px 16px 8px 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.info {
+  color: #00529B;
+  background-color: rgba(189, 229, 248, 0.8);
+}
+.success {
+  color: #4F8A10;
+  background-color: rgba(223, 242, 191, 0.8);
+}
+.warning {
+	color: #9F6000;
+	background-color: rgb(254, 239, 179, 0.8);
+}
+.error {
+  color: #D8000C;
+  background-color: rgb(255, 186, 186, 0.8);
+}
+.validation {
+  color: #D63301;
+  background-color: rgb(255, 204, 186, 0.8);
+}
 @media screen and (max-width: 1400px), (max-height: 800px) {
   #main_header {
     min-height: 80px;
