--- a/css/mainstyles.css
+++ b/css/mainstyles.css
@@ -177,7 +177,9 @@ navbar .divider {
   line-height: 16px;
 }
 .text p {
+  margin: 8px 0px;
   max-width: 840px;
+  font-size: 18px;
 }
 
 .hidden {
