--- a/css/staff_page.css
+++ b/css/staff_page.css
@@ -25,7 +25,7 @@ body {
 
 .main {
   width: 100%;
-  height: 150vh;
+  height: auto;
   background: var(--white);
   transition: width 300ms linear;
 }
@@ -381,6 +381,14 @@ body {
   display: inline-block;
   margin-right: 8px;
 }
+.inline-bar {
+  min-height: 16px;
+  width: 4px;
+  background-color: none;
+  border-radius: 2px;
+  display: inline-block;
+  margin-right: 8px;
+}
 .green {
   background-color: #96d42b;
 }
@@ -402,6 +410,94 @@ spacer {
   width: 100%;
   display: block;
   background: none;
+}
+
+.event_card_container {
+  width: 100%;
+  height: auto;
+  min-height: 350px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(460px, 1fr));
+  grid-auto-flow: row;
+  grid-gap: 32px;
+  padding: 0px;
+}
+.event_card_container li {
+  max-width: 840px;
+  max-height: 350px;
+  min-height: 350px;
+  height: 350px;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  margin: 0px;
+  text-align: center;
+  /*Default background color if the time is not specified*/
+  background: var(--white);
+  border-radius: 16px;
+  box-shadow: 0 6px 12px -3px rgba(0,0,0,.3);
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.event_card {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: 1fr;
+}
+.event_card * {
+  display: block;
+  text-align: left;
+}
+.event_card header {
+  width: auto;
+  height: auto;
+  background: none;
+  padding: 8px;
+  border-bottom: 4px solid rgb(0,0,0);
+  text-transform: capitalize;
+}
+.event_card article {
+  height: 100%%;
+  padding: 8px 0px 0px 8px;
+  background: var(--white);
+  border-radius: 0px 0px 16px 16px;
+  color: black;
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  grid-template-rows: repeat(3, auto);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+.event_card article span {
+  display: inline-block;
+  margin: 0px 8px 0px 0px;
+}
+.event_card article ul {
+  padding: 0;
+}
+.event_card .content {
+  grid-area: 2 / 1 / 3 / 2;
+  width: 100%;
+  height: 100%;
+  margin: 0px auto auto 0px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto 1fr;
+  grid-auto-flow: row;
+  grid-row-gap: 4px;
+}
+.event_card .content *:last-child {
+  width: 100%;
+  height: auto;
+  column-span: all;
+  grid-column: 1 / -1;
+}
+.event_card h5 {
+  line-height: 26px;
 }
 
 @media screen and (max-width: 1400px), (max-height: 800px) {
