Overhauled the style of tables and event cards.
Added an updating background that changes based on the time of day. This is used to customise tables and events based on when they are set.

--- a/css/main_page.css
+++ b/css/main_page.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: url('../../images/poly1.png');
+  background: var(--dynamic_background);
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
