--- a/css/staff_page.css
+++ b/css/staff_page.css
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
 <style>
+:root {
+  --red: rgb(238,57,52);
+  --orange: rgb(255,180,0);
+  --green: rgb(68,202,90);
+  --blue: rgb(48,134,235);
+
+  --red-pastel: rgb(255,179,186);
+  --orange-pastel: rgb(255,223,186);
+  --yellow-pastel: rgb(255,255,186);
+  --green-pastel: rgb(186,255,201);
+  --blue-pastel: rgb(186,225,255);
+}
+
 body {
   height: 100%;
   width: 100vw;
@@ -50,7 +63,7 @@ body {
   width: 300px;
   min-width: 300px;
   height: calc(100vh - 120px);
-  background: url('../../images/poly1.png');
+  background: var(--dynamic_background);
   background-size: cover;
   z-index: 1;
   display: block;
@@ -106,7 +119,7 @@ body {
   height: 20px;
   display: block;
   cursor: default;
-  background: rgba(0,0,0,0.0);
+  background: none;
 }
 #sidebar_contents hr {
   display: block;
@@ -162,19 +175,27 @@ body {
   height: auto;
   display: flex;
   flex-direction: column;
-  border-radius: 60px 60px 30px 30px;
+  border-radius: 16px;
   box-shadow: 0px 3px 15px rgb(0 0 0 / 20%);
   margin-bottom: 40px;
+  background: var(--dynamic_background);
 }
 .table_wrapper header {
   width: 100%;
   min-height: 60px;
   grid-area: 1 / 1 / 2 / 2;
-  border-radius: 60px 60px 0px 0px;
+  border-radius: 16px 16px 0px 0px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  background: rgba(0,0,0,0.1);
+}
+.table_wrapper header h2 {
+  font-size: 40px;
+  letter-spacing: 4px;
+  color: var(--white);
+  margin-left: 8px;
 }
 .table_wrapper header .button_wrapper {
   width: auto;
@@ -206,17 +227,16 @@ body {
   width: 100%;
   min-height: 30px;
   grid-area: 1 / 1 / 2 / 2;
-  border-radius: 0px 0px 60px 60px;
+  border-radius: 0px 0px 16px 16px;
+  background: rgba(40, 40, 40, 0.4);
 }
-.table_wrapper footer, header {
-  background-color: #2D3A43;
+.table_wrapper header {
+  background: none;
 }
-.table_wrapper header h2 {
-  font-size: 32px;
-  letter-spacing: 4px;
-  color: var(--white);
-  margin-left: 60px;
+.table_wrapper tr th {
+  background: rgba(40, 40, 40, 0.6s);
 }
+
 .table {
   border-collapse: collapse;
   table-layout: auto;
@@ -225,24 +245,26 @@ body {
 .table td, .table th {
   padding: 8px;
 }
-.has_edit th:last-of-type {
-  width: 60px;
-}
-.table tr:nth-child(even){
-  background-color: #DDDDDD;
-}
-.table tr:hover {
-  background-color: rgba(0,0,0,0.2);
-}
-.table tr:hover button {
-  display: block;
-}
 .table th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #3C4D5A;
-  color: white;
+  color: var(--white);
+}
+.table tr:nth-child(even){
+  background-color: rgba(221, 221, 221, 0.9);
+}
+.table tr:nth-child(odd) {
+  background-color: rgba(248, 245, 250, 0.9);
+}
+.table tr:first-of-type {
+  background: rgba(0,0,0,0.3);
+}
+.table tr:not(:first-of-type):hover {
+  background-color: rgba(198, 196, 200, 0.9);
+}
+.table tr:hover button {
+  display: block;
 }
 .table button {
   margin: 0px;
@@ -254,6 +276,11 @@ body {
   color: var(--white);
   cursor: pointer;
   display: none;
+}
+
+
+.has_edit th:last-of-type {
+  width: 60px;
 }
 
 .input_wrapper {
@@ -389,17 +416,20 @@ body {
   display: inline-block;
   margin-right: 8px;
 }
-.green {
-  background-color: #96d42b;
+.red {
+  background-color: var(--red);
 }
 .orange {
-  background-color: #fbca04;
+  background-color: var(--orange);
 }
-.red {
-  background-color: #ff3333;
+.yellow {
+  background-color: var(--yellow);
+}
+.green {
+  background-color: var(--green);
 }
 .blue {
-  background-color: #75c9f0;
+  background-color: var(--blue);
 }
 .info_wrapper {
   width: 100%;
@@ -455,7 +485,8 @@ spacer {
 .event_card header {
   width: auto;
   height: auto;
-  background: none;
+  background: rgba(0,0,0,0.1);
+  border-radius: 16px 16px 0px 0px;
   padding: 8px;
   border-bottom: 4px solid rgb(0,0,0);
   text-transform: capitalize;
